cabal-version: 2.2

author: Mitchell Rosen, Travis Staton
bug-reports: https://github.com/awkward-squad/pin-board/issues
category: Concurrency
copyright: Copyright (C) 2020-2021 Mitchell Rosen, Travis Staton
homepage: https://github.com/awkward-squad/pin-board
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
name: pin-board
stability: experimental
synopsis: A lightweight structured concurrency library
version: 0.3.0

description:
  TODO

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/awkward-squad/pin-board

common component
  build-depends:
    base ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    PartialTypeSignatures
    PatternSynonyms
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: component
  build-depends:
    containers ^>= 0.6.4,
    hashable ^>= 1.4,
  exposed-modules:
    PinBoard
  hs-source-dirs: src
